force-app/main/default/objects/Queue_metadata__mdt/Queue_metadata__mdt.object-meta.xml
<CustomObject>
    <label>Queue metadata</label>
    <pluralLabel>Queues metadata</pluralLabel>
</CustomObject>