force-app/main/default/objects/Queue_metadata__mdt/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <label>Queue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>