force-app/main/default/objects/Queue_metadata__mdt/fields/Queue_others__c.field-meta.xml
<CustomField>
    <fullName>Queue_others__c</fullName>
    <label>Queue others</label>
    <length>18</length>
    <type>Text</type>
</CustomField>